--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
-    "meteor-node-stubs": "~0.2.4"
+    "meteor-node-stubs": "~0.2.4",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
+    "react": "^16.2.0",
+    "react-router": "^4.2.0"
   }
 }
