--- a/package.json
+++ b/package.json
@@ -2,14 +2,44 @@
   "name": "Sheng-ji-2.0",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "lint": "eslint .",
+    "pretest": "npm run lint --silent"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.20.0",
+    "bcrypt": "^1.0.3",
+    "classnames": "^2.2.5",
+    "history": "^4.7.2",
+    "imports": "^1.0.0",
     "meteor-node-stubs": "~0.2.4",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
-    "react-router": "^4.2.0"
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "typescript": "^2.6.2"
+  },
+  "devDependencies": {
+    "@meteorjs/eslint-config-meteor": "^1.0.5",
+    "babel-eslint": "^8.1.2",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-import-resolver-meteor": "^0.4.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-meteor": "^4.1.4",
+    "eslint-plugin-react": "^7.5.1"
+  },
+  "eslintConfig": {
+    "extends": "@meteorjs/eslint-config-meteor",
+    "rules": {
+      "comma-dangle": ["error", "never"]
+    }
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
