--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.3",
     "classnames": "^2.2.5",
+    "css-loader": "^0.28.7",
     "history": "^4.7.2",
     "imports": "^1.0.0",
     "meteor-node-stubs": "~0.2.4",
@@ -20,6 +21,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
+    "style-loader": "^0.19.1",
     "typescript": "^2.6.2"
   },
   "devDependencies": {
@@ -36,7 +38,10 @@
   "eslintConfig": {
     "extends": "@meteorjs/eslint-config-meteor",
     "rules": {
-      "comma-dangle": ["error", "never"]
+      "comma-dangle": [
+        "error",
+        "never"
+      ]
     }
   },
   "prettier": {
